@@ -6,6 +6,7 @@ SQuirreL SQL Client Change Log
 
 Bug-Fixes:
 
+2754166: SQLScript plugin loses precision for Timestamp in H2
 2722109: "Oracle Session information window" does not close
 2713952: Create table script (on Sybase): Always generate "datetime" type for "date" (and datetime)
 2657987: Session was closed even if session closing confirm dialog was not confirmed. Connection was not 
